[package]
name = "df2"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.3"
rayon = "1.5"
thousands = "0.2"
"colored" = "3.0"
prettytable-rs = "0.10.0"
scope_timer = "0.2.3"
timeit = "0.1.2"
superconsole = "0.2.0"
anyhow = "1.0.97"
sorted-vec = "0.8.6"
crossbeam = "0.8.4"
once_cell = "1.21.3"
strum = "0.27.1"
strum_macros = "0.27.1"
crossterm = "0.29.0"
bytesize = "2.0.1"
