[package]
name = "df2"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "3.0"
prettytable-rs = "0.10.0"
superconsole = "0.2.0"
anyhow = "1.0.97"
crossbeam = "0.8.4"
once_cell = "1.21.3"
strum = "0.27.1"
strum_macros = "0.27.1"
crossterm = "0.29.0"
bytesize = "2.0.1"
clap = { version = "4.5.37", features = ["derive"] }
num_cpus = "1.16.0"
dashmap = "6.1.0"
